--- a/index.html
+++ b/index.html
@@ -5,25 +5,18 @@
 <head>
     <script src="chat.js"></script>
     <link rel="stylesheet" href="style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
 </head>
 
 <body>
     <div class="header">
-        <h1>Chat</h1>
+        <h1>Oh! Hello!</h1>
         <input type="text" class="usrnm-input" placeholder="Username">
     </div>
     <div class="getbutton">
-        <button class="get">GET NEW MESSAGES</button>
+        <button class="get">What are My Friends Saying?</button>
     </div>
     <section class="chatfield">
-        <!--<div class="messageunit">
-            <div class="nametext">
-                <p class="name"></p>
-                <p class="text"></p>
-            </div>
-            <p class="timesig"></p>
-        </div>       -->
     </section>
     <div class="textinput">
         <input type="text" class="message-input" placeholder="Enter your Message">
